# Reeduc

./: .gitignore  LICENSE  README.md
.github/workflows/: api_ci_tests.yml  workflow.yaml
api/: README.md  app.db  app.py  compose.yml  db.py  departments.py  dockerfile  main.py  models.py  products.py  pyproject.toml  schemas.py
api/.github/workflows/: test.yml  workflow.yaml  workflow.yml
api/app/: __init__.py
api/database/: __init__.py
api/resources/: departments.py  home.py  peoples.py  peopletypes.py  products.py  users.py
api/schemas/: __init__.py  department.py  people.py  product.py  schemas.py  user.py
api/tests/: test_peoples_endpoints.py  test_products.py
app/: README.md
